sumo/tests/traci/Scenario/DomainVehicle/InvalidObjectID/errors.traci
Answered with error to command 115: Unable to retrieve node with given ID
Error while receiving command: tcpip::Socket::receive() @ recv: Socket reset by peer
Error while sending command: send failed: Socket reset by peer
